change Pokeball to svg, adds update notification & changenotes dialog